Release Notes

* 1/29/2019
  * added es_toolong

* 1/25/2019
  * added corrupted events

* 1/18/2019
  * checking batchID in updateJob

* 12/21/2018
  * to reduce attempts for esmerge

* 12/19/2018
  * to change MCORE to SCORE for small ES jobs

* 12/5/2018
  * to take into account objstoreIDs of zip files when making esmerge

* 11/14/2018
  * one sub per job for ART

* 10/30/2018
  * added list_ptest_prod_sources

* 10/22/2018
  * added proc_status
  * sending ioIntensity
  * fixed ppE for maxAttempt

* 10/16/2018
  * added decAttOnFailedES

* 10/5/2018
  * added discardEvents in retryTask

* 9/26/2018
  * added grace_period in eraseDataset

* 9/25/2018
  * moved file lock from getEvents to ppE

* 9/7/2018
  * added scattered in getEventRanges

* 7/24/2018
  * added rc_test2

* 7/23/2018
  * added reloadInput

* 7/16/2018
  * fixed recoverLostFiles to update nEvents in input and output datasets

* 6/19/2018
  * added noChildRetry to recoverLostFiles

* 6/18/2018
  * added hasReadyEvents

* 6/13/2018
  * added harvester_slots

* 6/10/2018
  * added useBrokerOff in catchall

* 5/30/2018
  * enabled aggressive heartbeat check

* 5/23/2018
  * added transpath to global share

* 5/22/2018
  * added guid check in Adder

* 5/18/2018
  * added EC_WorkerDone

* 5/17/2018
  * added syncLevel to updateWorker

* 5/8/2018
  * added getJobStatisticsPerSiteResource

* 5/7/2018
  * schedconfig.capability

* 4/25/2018
  * improved getSitesShareDDM to reflect new endpoint association

* 4/10/2018
  * added updateJobsInBulk

* 4/9/2018
  * added nJobs and computingElement to workers

* 4/6/2018
  * added sj
  * fixed getJobs for notDiscardEvents

* 3/28/2018
  * added harvester_dialogs

* 3/20/2018
  * not to discard events

* 3/16/2018
  * reset stateChangeTime for retried es merge
  * to avoid himem for es merge

* 3/15/2018
  * input files in ZIP_MAP
  * changed ordering of event ranges

* 3/15/2018